[package]
name = "labyrinth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "labyrinth"
path = "src/lib.rs"

[[bin]]
name = "example-maze"
path = "src/examples/maze.rs"

[dependencies]
enum-map = "1.1.1"
enum-map-derive = "0.6.0"
rand = "0.8.4"
